--- a/SchoolCoin/index.html
+++ b/SchoolCoin/index.html
@@ -15,8 +15,9 @@
   </div>
 
   <!-- Telegram WebApp SDK -->
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="https://k4444539-cmd.github.io/Schoolcoin/"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
