--- a/SchoolCoin/index.html
+++ b/SchoolCoin/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Шкільний міні-апп</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <div class="container">
@@ -19,6 +19,3 @@
   <script src="js/app.js"></script>
 </body>
 </html>
-
-
-
