--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <!-- Верхня панель -->
   <header class="header">
     <div class="avatar">
-      <img src="img/avatar.png" alt="Avatar">
+      <img src="avatar.png" alt="Avatar">
     </div>
     <div class="balance">
-      <img src="img/coin.png" alt="Coin" class="coin-icon">
+      <img src="coin.png" alt="Coin" class="coin-icon">
       <span id="balance">5</span> SC
     </div>
   </header>
@@ -21,20 +21,20 @@
   <!-- Основний блок -->
   <main class="content">
     <h1>Топ 10 гравців</h1>
-    <ul class="leaderboard">
+    <ul class="leaderboard" id="leaderboard">
       <li><span>1. Андрій</span> <span>150 SC</span></li>
       <li><span>2. Оля</span> <span>120 SC</span></li>
       <li><span>3. Макс</span> <span>110 SC</span></li>
-      <!-- решта учасників -->
     </ul>
   </main>
 
   <!-- Нижня навігація -->
   <footer class="footer">
-    <button class="home-btn">🏠 Home</button>
-    <button class="cases-btn">🎁 Кейс</button>
+    <a href="cases.html" class="nav-btn">🎁 Кейси</a>
+    <a href="index.html" class="nav-btn active">🏠 Дім</a>
+    <a href="profile.html" class="nav-btn">👤 Профіль</a>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
-
-
