--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <a href="profile.html" class="nav-btn">👤 Профіль</a>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
+
