--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
     </ul>
   </main>
 
-      <!-- Bottom Navigation -->
-  <div class="navbar">
-     <button class="active" onclick="showPage('home')">Home</button>
-     <button onclick="showPage('cases')">Cases</button>
-     <button onclick="showPage('profile')">Profile</button>
-  </div>
+       <!-- Bottom Navigation -->
+  <footer class="footer-bar">
+     <button class="nav-btn active" onclick="showPage('home', this)">Home</button>
+     <button class="nav-btn" onclick="showPage('cases', this)">Cases</button>
+     <button class="nav-btn" onclick="showPage('profile', this)">Profile</button>
+  </footer>
+
 
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
