--- a/index.html
+++ b/index.html
@@ -28,17 +28,13 @@
     </ul>
   </main>
 
-       <!-- Bottom Navigation -->
+  <!-- Нижня панель -->
   <footer class="footer-bar">
      <button class="nav-btn active" onclick="showPage('home', this)">Home</button>
      <button class="nav-btn" onclick="showPage('cases', this)">Cases</button>
      <button class="nav-btn" onclick="showPage('profile', this)">Profile</button>
   </footer>
 
-
   <script src="app.js"></script>
 </body>
 </html>
-
-
-
