--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
     </div>
   </header>
   
-  <!-- Форма реєстрації -->
+  <!-- Popup реєстрація -->
   <div id="registration" class="registration">
-    <h2>Реєстрація</h2>
-    <input type="text" id="fullname" placeholder="Введіть ім'я та прізвище">
-    <input type="text" id="code" placeholder="Введіть код">
-    <button id="registerBtn">Готово</button>
+    <div class="reg-box">
+      <h2>Реєстрація</h2>
+      <input type="text" id="fullname" placeholder="Введіть ім'я та прізвище">
+      <input type="text" id="code" placeholder="Введіть код">
+      <button id="registerBtn">Готово</button>
+    </div>
   </div>
 
   <!-- Основний блок -->
   <main id="content" class="content">
-    <!-- Тут буде мінятися контент -->
+    <!-- Контент міняється через JS -->
   </main>
 
   <!-- Нижня панель -->
