--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     </div>
   </div>
 
+  
+<!-- Контент головного екрану -->
+<main id="content" class="content"></main>
+  
   <!-- Основний блок -->
   <main id="content" class="content">
     <!-- Контент міняється через JS -->
@@ -44,3 +48,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
